[metadata]
name = monthly_calendar_plot
version = 0.2

url = https://github.com/MarkusPic/monthly-calendar-plot
license = MIT
author = Markus Pichler
author_email = markus.pichler@tugraz.at
description = Create a calendar with each month separate. Week numbers as rows and day of the week names as columns.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = monthly_calendar_plot
install_requires = file: requirements.txt
